# note_mcp

./: README.md  pyproject.toml  start.py
src/note_taker/: server.py
