[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "note-taker" # [!code highlight] (Changed from hello-server)
version = "0.1.0"
description = "An MCP server for taking notes"
authors = [
    {name = "sowmya", email = "sowmya@rapidinnovation.dev"}
]

requires-python = ">=3.10"
dependencies = [
    "mcp>=1.15.0",
    "pydantic>=2.12.5",
    "smithery>=0.4.2",
]

[project.scripts]
dev = "smithery.cli.dev:main" # Run the MCP server in development mode
start = "smithery.cli.start:main" # Run the MCP server in production mode
playground = "smithery.cli.playground:main" # Run server with interactive testing playground

[tool.smithery]
server = "note_taker.server:create_server" # Function that returns a patched FastMCP server
log_level = "warning" # Production log level (optional, defaults to "warning")
